manifests/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: collegehub
spec:
  selector:
    app: redis
  ports:
  - port: 6382
    targetPort: 6382
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: collegehub
spec:
   replicas: 1
   selector:
     matchLabels:
       app: redis
   template:
     metadata:
       labels:
         app: redis
     spec:
       containers:
       - name: redis
         image: redis:7-alpine
         ports:
         - containerPort: 6382
         resources:
           requests:
             memory: "128Mi"
             cpu: "100m"
           limits:
             memory: "256Mi"
             cpu: "200m"
